[gd_scene load_steps=2 format=3 uid="uid://bsba5teil2v2l"]

[ext_resource type="Script" uid="uid://df1gmeiyv6avc" path="res://gear/_ui/inventory/InventoryUI.gd" id="1_cs4o0"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchor_right = 0.205
anchor_bottom = 0.768
offset_right = -0.400024
offset_bottom = 0.176025
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cs4o0")

[node name="Inventory" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterName" type="Label" parent="Inventory"]
layout_mode = 2

[node name="Equipped" type="Label" parent="Inventory"]
layout_mode = 2
text = "Equipped"

[node name="EquippedList" type="ItemList" parent="Inventory"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
allow_search = false

[node name="Inventory" type="Label" parent="Inventory"]
layout_mode = 2
text = "Inventory"

[node name="InventoryList" type="ItemList" parent="Inventory"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
allow_search = false
same_column_width = true

[node name="ActionButton" type="Button" parent="Inventory"]
layout_mode = 2
text = "Equip"

[node name="UnequipButton" type="Button" parent="Inventory"]
layout_mode = 2
text = "Unequip"

[node name="TransferButton" type="Button" parent="Inventory"]
layout_mode = 2
text = "Transfer"

[node name="ItemInfoPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.073
anchor_top = 0.092
anchor_right = 1.84
anchor_bottom = 1.0
offset_left = -0.125977
offset_top = -0.280006
offset_right = -0.0799561
offset_bottom = -1.0

[node name="ItemName" type="Label" parent="ItemInfoPanel"]
layout_mode = 2

[node name="ItemType" type="Label" parent="ItemInfoPanel"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="ItemInfoPanel"]
layout_mode = 2

[node name="EffectsLabel" type="Label" parent="ItemInfoPanel"]
layout_mode = 2

[node name="ModifiersLabel" type="Label" parent="ItemInfoPanel"]
layout_mode = 2

[connection signal="pressed" from="Inventory/ActionButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="Inventory/ActionButton" to="." method="_on_action_button_pressed"]
[connection signal="pressed" from="Inventory/UnequipButton" to="." method="_on_unequip_button_pressed"]
[connection signal="pressed" from="Inventory/TransferButton" to="." method="_on_transfer_button_pressed"]
